# Dashboad_API_rust

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  start-backend.ps1
.cargo/: config.toml
.sqlx/: query-33e1c63e1611e01376e128bd32476de6bba17576a10ac7efd609428e200be02b.json  query-58a5be715ebae4ea0a860a4bf85a2170c7d3e7cd2a3aabd887c881f105db3640.json  query-b769e4701c2c70862463378705686e5fba41bf8229b4dcb23f16d4c1afd0ffb2.json  query-cd5c89ba074608c935aa4bdaed1b3e408be48128d90822209a78d5ea1bd734ed.json  query-d3beee54d7ee546eb4048e447d5819795adfaca0e68f8cef9fb46916453e7610.json  query-d8003ef16c0cc08e6608994613c1c0a5b67894c6d4a0662803b4bbfb69115ba6.json
deploy/: DEPLOY.md  deploy-server.ps1  iis-rewrite.xml  install-service.ps1
docs/plan/: middleware-api-port.md
examples/: oracle_cache_check.rs  oracle_smoke.rs  wb_uph_dump.rs
migrations/: 20240101000000_create_items.sql
src/: app.rs  lib.rs  main.rs
src/config/: mod.rs
src/db/: mod.rs
src/errors/: mod.rs
src/handlers/: auth.rs  da.rs  da_uph.rs  docs.rs  downtime.rs  health.rs  inventory.rs  items.rs  master.rs  mod.rs  overview.rs  permissions.rs  tech.rs  users.rs  utilization.rs  wb.rs  wb_uph.rs
src/helpers/: kpi.rs  mod.rs  where_builder.rs
src/middleware/: api_key.rs  jwt_auth.rs  mod.rs
src/models/: mod.rs
src/oracle/: agg.rs  cache.rs  mod.rs  model.rs
src/repositories/: auth_repo.rs  da_repo.rs  da_uph_repo.rs  downtime_repo.rs  inventory_repo.rs  item_repo.rs  master_repo.rs  mod.rs  mssql_util.rs  overview_repo.rs  tech_repo.rs  utilization_repo.rs  wb_repo.rs  wb_uph_repo.rs
static/: api-docs.html  openapi.json
tests/: helpers_test.rs
