[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
# Web Framework
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "request-id", "compression-full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database — SQLite (items CRUD) + Postgres (DA-UPH module, async)
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "migrate", "uuid", "chrono"] }

# Database — SQLite (WB-UPH module, central.db; synchronous, run via spawn_blocking)
rusqlite = { version = "0.31", features = ["bundled"] }

# Database — Oracle (ISO/FS areas; synchronous ODPI-C thick mode, run via spawn_blocking)
oracle = { version = "0.6", features = ["chrono"] }

# Database — MSSQL (dashboard API)
tiberius = { version = "0.12", features = ["chrono", "tds73"] }
bb8 = "0.9"
bb8-tiberius = "0.16"

# Config & Environment
dotenvy = "0.15"

# Error Handling
thiserror = "2"
anyhow = "1"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ID Generation
uuid = { version = "1", features = ["v4", "serde"] }

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Auth — pure Rust (ไม่ต้อง gcc/ring)
bcrypt = "0.15"
hmac   = { version = "0.12", features = ["std"] }
sha2   = "0.10"
base64 = "0.22"

[dev-dependencies]
# Integration testing
axum-test = "15"
tokio = { version = "1", features = ["full", "test-util"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
